6987555: JSR 292 unboxing to a boolean value fails on big-endian SPARC

Reviewed-by: never, jrose